# timeWaster

./: .env  .env.example  .eslintignore  .eslintrc.js  .gitignore  Cargo.toml  LICENSE.md  README.md  index.html  manifest.webmanifest  package-lock.json  package.json  pnpm-lock.yaml  registerSW.js  sw.js  tailwind.config.js  tsconfig.json  unocss.config.ts  vite.config.ts
asTime/: pnpm-lock.yaml
asTime/src/: index.ts
assembly/: package.json
assembly/src/: index.ts
assembly/tests/: index.js
assets/: CatBtn-54c5fc33.js  CatBtn-92442e48.js  CatBtn-caf797fb.js  CatBtn-d2849917.css  Channel-1fbaffbd.js  Channel-767abb91.js  Channel-d55a080d.js  Channel-f360ec3f.css  NotFound-21a544f0.js  NotFound-cadb788b.js  NotFound-f53ebf37.css  NotFound-f6335987.js  TheInput-48a60911.js  TheInput-9951b550.js  TheInput-9f86ab1f.js  TheInput-ad4f976b.css  app-60c8e0e5.js  app-8989940e.js  app-f120e9f7.js  home.0a672ce1.js  home.0cdb2fa2.js  home.5186d879.js  home.5d0ed1fc.css  home.69b8ab63.js  home.af1e741b.css  home.b551547c.css  home.ca77ed38.js  home.d105d82a.js  home.e658d46c.js  home.f1f7cf85.js  home.fecce749.js  index-2152ccae.js  index-235f4331.js  index-39833b33.js  index-42de583f.js  index-43a4591f.js  index-52eb9534.css  index-6f4b4890.js  index-a2744ac6.css  index-cfc64c49.js  (+35 more)
config/: index.js
demo/: index.html
ratatui-turorial/stopwatch/: Cargo.toml
ratatui-turorial/stopwatch/src/: main.rs  tui.rs
src/: App.tsx  App.vue  app.html  index.css  main.js  main.rs  main.ts  router.ts  shims-vue.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
static/: pretty.css
(+94 files in other folders)
