[package]
name = "stopwatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
directories = "5.0.1"
futures = "0.3.28"
human-panic = "1.2.0"
itertools = "0.11.0"
libc = "0.2.147"
log = "0.4.20"
strip-ansi-escapes = "0.2.0"
strum = "0.25.0"
tokio = { version = "1.32.0", features = ["full"] }
tui-big-text = "0.1.4"
better-panic = "0.3.0"
clap = { version = "4.4.6", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
config = "0.13.3"
derive_deref = "1.1.1"
json5 = "0.4.1"
lazy_static = "1.4.0"
pretty_assertions = "1.4.0"
ratatui = { version = "0.23.0", features = ["serde", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
signal-hook = "0.3.17"
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }